Added CS510 Proof-of-concept build

--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 <h1>CS 670 Data Science Project 1 Report:</h1>
 <a href="https://cjohns64.github.io/CS670_CourseProject.html">CS670_Project1_Report</a>
 
+<h1>CS 510 Game Programming Project - Proof-of-concept build:</h1>
+<a href="https://cjohns64.github.io/CS510_Project/POC_Build_01/index.html">CS510_Project_POC</a>
+
 </body>
 </html> 
