Added CS510 Alpha build

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <h1>CS 510 Game Programming Project - Proof-of-concept build:</h1>
 <a href="https://cjohns64.github.io/CS510_Project/POC_Build_01/index.html">CS510_Project_POC</a>
 
+<h1>CS 510 Game Programming Project - Alpha build:</h1>
+<a href="https://cjohns64.github.io/CS510_Project/Alpha_Build_01/index.html">CS510_Project_Alpha</a>
+
 </body>
 </html> 
