Added Game Programming Beta Build

--- a/index.html
+++ b/index.html
@@ -40,13 +40,18 @@
     <p>For the final project for Data Science, I worked mostly on sections 2.4-2.8.</p><br>
     <a href="https://cjohns64.github.io/CS670_CourseProject.html">CS670 Project1 Report</a>
     
-    <h2>CS 510 Game Programming Project - Proof-of-concept build:</h2>
+    <h2>CS 510 Game Programming Project</h2>
+    <h3>Proof-of-concept build:</h3>
     <p>The playable proof-of-concept of this project is extremely buggy, and the progression systems have not yet been implemented. I worked mostly on the ship asset, the inventory system, and the menus.</p><br>
     <a href="https://cjohns64.github.io/CS510_Project/POC_Build_01/index.html">CS510 POC Build</a>
     
-    <h2>CS 510 Game Programming Project - Alpha build:</h2>
+    <h3>Alpha build:</h3>
     <p>I almost completely refactored the inventory system for the alpha build. The game is much closer to having a single area implemented, but the main progression systems are not yet functional. I worked on the inventory and upgrade system, as well as all the assets.</p><br>
     <a href="https://cjohns64.github.io/CS510_Project/Alpha_Build_01/index.html">CS510 Alpha Build</a>
+
+    <h3>Beta build:</h3>
+    <p>For this build I reworked the player menus, built a main menu, worked on a system for transitioning between zones, and almost finished the progression system. We decided to change the scope of the game from a trading game to a delivery game, since an economy would have added unnecessary complexity. However, we discovered too late that the new shader for the orbit lines was not compatible with webgl, so this version ended up even less playable then the alpha, despite being a lot more stable.</p><br>
+    <a href="https://cjohns64.github.io/CS510_Project/Beta_Build_01/index.html">CS510 Beta Build</a>
 </div>
 <br>
 <div class="links">
