Game Programming Final Build

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
     <h3>Beta build:</h3>
     <p>For this build I reworked the player menus, built a main menu, worked on a system for transitioning between zones, and almost finished the progression system. We decided to change the scope of the game from a trading game to a delivery game, since an economy would have added unnecessary complexity. However, we discovered too late that the new shader for the orbit lines was not compatible with webgl, so this version ended up even less playable then the alpha, despite being a lot more stable.</p><br>
     <a href="https://cjohns64.github.io/CS510_Project/Beta_Build_01/index.html">CS510 Beta Build</a>
+
+    <h3>Final build:</h3>
+    <p>In this build the orbit lines were reverted to their alpha state, and the game finally has a full feature set.</p><br>
+    <a href="https://cjohns64.github.io/CS510_Project/Final_Build_01/index.html">CS510 Final Build</a>
 </div>
 <br>
 <div class="links">
