Updated Final Build

--- a/CS510_Project/Final_Build_01/index.html
+++ b/CS510_Project/Final_Build_01/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Web Player | cs510_Project</title>
+    <title>Unity Web Player | Interstellar Delivery Service</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-logo-title-footer"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">cs510_Project</div>
+        <div id="unity-build-title">Interstellar Delivery Service</div>
       </div>
     </div>
     <script>
@@ -52,16 +52,16 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/final 02.loader.js";
+      var loaderUrl = buildUrl + "/Final 03.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/final 02.data",
-        frameworkUrl: buildUrl + "/final 02.framework.js",
-        codeUrl: buildUrl + "/final 02.wasm",
+        dataUrl: buildUrl + "/Final 03.data",
+        frameworkUrl: buildUrl + "/Final 03.framework.js",
+        codeUrl: buildUrl + "/Final 03.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Cory Johns _ Kai Iverson",
-        productName: "cs510_Project",
-        productVersion: "0.9.1",
+        productName: "Interstellar Delivery Service",
+        productVersion: "1.0",
         showBanner: unityShowBanner,
       };
 
