--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <a href="https://cjohns64.github.io/CS510_Project/Beta_Build_01/index.html">CS510 Beta Build</a>
 
     <h3>Final build:</h3>
-    <p>In this build the orbit lines were reverted to their alpha state, and the game finally has a full feature set.</p><br>
+    <p>In this build the orbit lines were reverted to their alpha state, and the game finally has a full feature set. Sound was added and several quality of life features were also implemented.</p><br>
     <a href="https://cjohns64.github.io/CS510_Project/Final_Build_01/index.html">CS510 Final Build</a>
 </div>
 <br>
