Changes to 510 Final project

--- a/CS510_Project/Final_Build_01/index.html
+++ b/CS510_Project/Final_Build_01/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Final 04.loader.js";
+      var loaderUrl = buildUrl + "/FinalWebGL.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Final 04.data",
-        frameworkUrl: buildUrl + "/Final 04.framework.js",
-        codeUrl: buildUrl + "/Final 04.wasm",
+        dataUrl: buildUrl + "/FinalWebGL.data",
+        frameworkUrl: buildUrl + "/FinalWebGL.framework.js",
+        codeUrl: buildUrl + "/FinalWebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Cory Johns _ Kai Iverson",
         productName: "Interstellar Delivery Service",
