Added CSS image slider for solaren animation project

--- a/blender/tree-asset/index.html
+++ b/blender/tree-asset/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width">
 <title>Tree Asset | Cory Johns - Projects</title>
 
-      <link rel="stylesheet" href="/css/style.min.7879b282085b4a0da4601c62e6c38c0e6a33040136788371aff7df7f242cf3aa.css" integrity="sha256-eHmygghbSg2kYBxi5sOMDmozBAE2eINxr/fffyQs86o=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/css/style.min.0de1c18f5d782823c6cb04429c67fb1e3850b1b6c6b210eefcfe2c71c3fe9962.css" integrity="sha256-DeHBj114KCPGywRCnGf7HjhQsbbGshDu/P4sccP&#43;mWI=" crossorigin="anonymous">
 
 
 </head>
